--- a/sagemaker-jumpstart/notebooks/02-aws-qna-kendra-rag.ipynb
+++ b/sagemaker-jumpstart/notebooks/02-aws-qna-kendra-rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -14,22 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "region = 'ENTER YOUR REGION HERE'\n",
-    "kendra_index_id = 'ENTER YOUR KENDRA INDEX ID HERE'\n",
-    "TEXT_GENERATION_MODEL_ENDPOINT_NAME = 'ENTER YOUR TEXT GENERATION MODEL END POINT NAME HERE'\n",
-    "\n",
-    "#TEXT_GENERATION_MODEL_ENDPOINT_NAME = 'jumpstart-dft-hf-llm-falcon-7b-instruct-bf16'"
+    "region = 'us-east-1' #'ENTER YOUR REGION HERE'\n",
+    "TEXT_GENERATION_MODEL_ENDPOINT_NAME = 'jumpstart-dft-hf-llm-falcon-7b-instruct-bf16' #'ENTER YOUR TEXT GENERATION MODEL END POINT NAME HERE'\n",
+    "kendra_index_id = 'b52d1029-70a1-4e81-8cd7-2082e5dc0e9b'  #'ENTER YOUR KENDRA INDEX ID HERE'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -39,12 +37,15 @@
     "                            region_name=region)\n",
     "\n",
     "kendra_client = boto3.client('kendra',\n",
+    "                            region_name=region)\n",
+    "\n",
+    "bedrock_runtime = boto3.client('bedrock-runtime',\n",
     "                            region_name=region)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -77,14 +78,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The AWS Well-Architected Framework is based on five pillars — operational\\nexcellence, security, reliability, performance efficiency, and cost optimization.\\n\\n\\nTable\\xa01.\\xa0The pillars of the AWS Well-Architected Framework\\n\\n\\nName Description\\nOperational Excellence The ability to run and monitor systems to'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"What are the 5 pillars of well architected framework?\"\n",
+    "context = get_kendra_results(query)\n",
+    "context\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SM_JS_MODEL = False\n",
+    "BEDROCK_MODEL = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "query = \"What are the 5 pillars of well architected framework?\"\n",
-    "context = get_kendra_results(query)"
+    "\n",
+    "if SM_JS_MODEL == True:\n",
+    "        template = \"\"\"\n",
+    "        You are a helpful, polite, fact-based agent.\n",
+    "        If you don't know the answer, just say that you don't know.\n",
+    "        Please answer the following question using the context provided. \n",
+    "\n",
+    "        CONTEXT: \n",
+    "        {context}\n",
+    "        =========\n",
+    "        QUESTION: {question} \n",
+    "        ANSWER: \"\"\"\n",
+    "\n",
+    "if BEDROCK_MODEL == True:\n",
+    "        template = f\"\"\"Human: You are a helpful, polite, fact-based agent.\n",
+    "        If you don't know the answer, just say that you don't know.\n",
+    "        Please answer the following question using the context provided. \n",
+    "\n",
+    "        CONTEXT: \n",
+    "        {context}\n",
+    "        =========\n",
+    "        QUESTION: {query} \n",
+    "        \n",
+    "        \n",
+    "        Assistant: \"\"\"\n"
    ]
   },
   {
@@ -95,38 +153,55 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Based on what we have learned, we have created the AWS Well-Architected Frame-\\nwork, which provides a consistent set of best practices for customers and partners to\\nevaluate architectures, and provides a set of questions you can use to evaluate how\\nwell an architecture is aligned to AWS best practic'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human: You are a helpful, polite, fact-based agent.\n",
+      "        If you don't know the answer, just say that you don't know.\n",
+      "        Please answer the following question using the context provided. \n",
+      "\n",
+      "        CONTEXT: \n",
+      "        The AWS Well-Architected Framework is based on five pillars — operational\n",
+      "excellence, security, reliability, performance efficiency, and cost optimization.\n",
+      "\n",
+      "\n",
+      "Table 1. The pillars of the AWS Well-Architected Framework\n",
+      "\n",
+      "\n",
+      "Name Description\n",
+      "Operational Excellence The ability to run and monitor systems to\n",
+      "        =========\n",
+      "        QUESTION: What are the 5 pillars of well architected framework? \n",
+      "        \n",
+      "        \n",
+      "        Assistant: \n"
+     ]
     }
    ],
    "source": [
-    "context"
+    "prompt = template.format(context=context, question=query)\n",
+    "print(prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "template = \"\"\"\n",
-    "        You are a helpful, polite, fact-based agent.\n",
-    "        If you don't know the answer, just say that you don't know.\n",
-    "        Please answer the following question using the context provided. \n",
+    "if SM_JS_MODEL == True:\n",
+    "    response_model = sagemaker_runtime_client.invoke_endpoint(\n",
+    "        EndpointName=TEXT_GENERATION_MODEL_ENDPOINT_NAME,\n",
+    "        Body=json.dumps(\n",
+    "            {\"inputs\": prompt, \"parameters\": {\"max_new_tokens\": 500}}\n",
+    "        ),\n",
+    "        ContentType=\"application/json\",\n",
+    "    )\n",
+    "    response = json.loads(response_model[\"Body\"].read())\n",
     "\n",
-    "        CONTEXT: \n",
-    "        {context}\n",
-    "        =========\n",
-    "        QUESTION: {question} \n",
-    "        ANSWER: \"\"\""
+    "    print(response[0][\"generated_text\"])"
    ]
   },
   {
@@ -140,66 +215,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " The 5 pillars of the AWS Well-Architected Framework are:\n",
       "\n",
-      "        You are a helpful, polite, fact-based agent.\n",
-      "        If you don't know the answer, just say that you don't know.\n",
-      "        Please answer the following question using the context provided. \n",
-      "\n",
-      "        CONTEXT: \n",
-      "        Based on what we have learned, we have created the AWS Well-Architected Frame-\n",
-      "work, which provides a consistent set of best practices for customers and partners to\n",
-      "evaluate architectures, and provides a set of questions you can use to evaluate how\n",
-      "well an architecture is aligned to AWS best practic\n",
-      "        =========\n",
-      "        QUESTION: What are the 5 pillars of well architected framework? \n",
-      "        ANSWER: \n"
+      "1. Operational Excellence \n",
+      "2. Security\n",
+      "3. Reliability\n",
+      "4. Performance Efficiency\n",
+      "5. Cost Optimization\n"
      ]
     }
    ],
    "source": [
-    "prompt = template.format(context=context, question=query)\n",
-    "print(prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "response_model = sagemaker_runtime_client.invoke_endpoint(\n",
-    "    EndpointName=TEXT_GENERATION_MODEL_ENDPOINT_NAME,\n",
-    "    Body=json.dumps(\n",
-    "        {\"inputs\": prompt, \"parameters\": {\"max_new_tokens\": 500}}\n",
-    "    ),\n",
-    "    ContentType=\"application/json\",\n",
-    ")\n",
-    "response = json.loads(response_model[\"Body\"].read())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. Security: Implementing security measures to protect data and systems. 2.\n",
-      "Availability: Ensuring that systems and services are available and reliable. 3.\n",
-      "Performance: Optimizing the speed and efficiency of systems and services. 4.\n",
-      "Reliability: Ensuring that systems and services are reliable and can be counted on. 5.\n",
-      "Cost: Implementing cost-effective solutions to reduce the cost of running systems and services.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(response[0][\"generated_text\"])"
+    "if BEDROCK_MODEL == True:\n",
+    "    anthropic_model = 'anthropic.claude-v1'\n",
+    "    body = json.dumps({\"prompt\": prompt, \"max_tokens_to_sample\": 250})\n",
+    "    \n",
+    "    accept = 'application/json'\n",
+    "    contentType = 'application/json'\n",
+    "\n",
+    "    response = bedrock_runtime.invoke_model(body=body, modelId=anthropic_model, \n",
+    "                                    accept=accept, \n",
+    "                                    contentType=contentType)\n",
+    "    \n",
+    "    response_body = json.loads(response.get('body').read())\n",
+    "    \n",
+    "    print(response_body['completion'])"
    ]
   }
  ],
@@ -781,9 +821,9 @@
   ],
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (Data Science 3.0)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/sagemaker-data-science-310-v1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -795,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
